[fix] jpa 미사용 에 따른 data-jpa 의존성 및 설정 제거 및 불필요 설정 정리

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,21 +1,4 @@
 spring:
   #profiles
   profiles:
-    include: redis
-
-    #console color
-  output:
-    ansi:
-      enable: ALWAYS
-
-  #Rest api properties name strategy
-  jackson:
-    property-naming-strategy: SNAKE_CASE
-
-#log level
-logging:
-  level:
-    root: info
-    org:
-      hibernate:
-        SQL: debug
+    include: local,redis
